# LC3-ASM-VM

./: CMakeLists.txt  README.md  main.c
data/: confl.h  memmapr.h  memory.h  opcodes.h  opcodes.hpp  regisiter.h  trapr.h
instr/: instr.c  instr.h
loader/: loader.c  loader.h
memmap/: memac.c  memac.h
spec/: spec.c  spec.h
trap/: trape.c  trape.h  trapin.c  trapin.h
